# regent-support-email-automation

./: .gitignore  README.md  WEBHOOK_NOTES.txt  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
docs/: CLOUDFLARE_PYTHON_WORKERS_GUIDE.md  PROJECT.md
migrations/: 0001_add_body_text_and_llm_usage.sql
scripts/: check_inbox.py  create_subscription.py  test_gemini.py  test_webhook.py
src/: classifier.py  config.py  database.py  entry.py  msgraph.py  presidio.py  utils.py
tests/: test_classifier.py  test_config.py  test_database.py  test_webhook.py
